name:                clod
version:             0.0.2.0
synopsis:            git-inspired command line utilities
description:         Command line utility for managing files inspired by git
license:             MIT
license-file:        LICENSE
author:              Daniel Stiner
maintainer:          Daniel Stiner <daniel.stiner@gmail.com>
stability:           experimental
homepage:            http://github.com/danstiner/clod
bug-reports:         http://github.com/danstiner/clod/issues
category:            Data, Network, Web
build-type:          Simple
cabal-version:       >=1.9.2
tested-with:         GHC==7.6.3, GHC==7.8.2

executable clod
  Hs-Source-Dirs:    src
  Main-Is:           Main.hs
  GHC-Options:       -Wall -threaded -O3
  GHC-Prof-Options:  -fprof-auto "-with-rtsopts=-N -p -s -i0.1"
  Build-Depends:       base >= 4.5 && < 4.8
                     , base16-bytestring
                     , base32-bytestring
                     , bytestring >= 0.10.4.0
                     , cereal
                     , containers
                     , cryptohash
                     , data-ordlist
                     , deepseq
                     , deepseq-generics
                     , digest
                     , directory
                     , errors
                     , filepath
                     , free
                     , higher-leveldb >= 0.1.0.3
                     , hslogger
                     , machines
                     , MissingH
                     , mtl
                     , optparse-applicative >= 0.10
                     , resourcet <0.5.0.0
                     , text
                     , timeit
                     , transformers == 0.3.*
                     , uuid

Test-suite pure
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    src test
  Main-Is:           TestSuite.hs
  Build-Depends:       base >= 4 && < 5
                     , base16-bytestring
                     , base32-bytestring
                     , bytestring >= 0.10.4.0
                     , cereal
                     , containers
                     , cryptohash
                     , data-ordlist
                     , deepseq
                     , deepseq-generics
                     , digest
                     , directory
                     , errors
                     , filepath
                     , free
                     , higher-leveldb >= 0.1.0.3
                     , hslogger
                     , machines
                     , MissingH
                     , mtl
                     , resourcet
                     , text
                     , transformers

                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2

Test-suite external
  Type:           exitcode-stdio-1.0
  Hs-Source-Dirs: src test
  Main-Is:        ExternalTestSuite.hs
  GHC-Options:    -threaded -O
  Build-Depends:  base >= 4 && < 5
                  , base16-bytestring
                  , base32-bytestring
                  , bytestring >= 0.10.4.0
                  , cereal
                  , containers
                  , cryptohash
                  , data-ordlist
                  , deepseq
                  , deepseq-generics
                  , digest
                  , directory
                  , errors
                  , filepath
                  , free
                  , higher-leveldb >= 0.1.0.3
                  , hslogger
                  , machines
                  , MissingH
                  , mtl
                  , resourcet
                  , temporary
                  , text
                  , transformers

                  , HUnit
                  , QuickCheck
                  , test-framework
                  , test-framework-hunit
                  , test-framework-quickcheck2


source-repository head
  type: git
  location: git://github.com:danstiner/clod.git
