name:                dupes
version:             0.0.2.0
synopsis:            git-inspired command line utilities
description:         Command line utility for managing files inspired by git
license:             MIT
license-file:        LICENSE
author:              Daniel Stiner
maintainer:          Daniel Stiner <daniel.stiner@gmail.com>
stability:           experimental
homepage:            http://github.com/danstiner/dupes
bug-reports:         http://github.com/danstiner/dupes/issues
category:            Data, Network, Web
build-type:          Simple
cabal-version:       >=1.9.2
tested-with:         GHC==7.6.3, GHC==7.8.2

executable dupes
  Hs-Source-Dirs:    src
  Main-Is:           Main.hs
  GHC-Options:       -Wall -threaded -fno-warn-unused-binds -fno-ignore-asserts
  GHC-Prof-Options:  -fprof-auto "-with-rtsopts=-N -p -s -i0.1"
  Build-Depends:       base >= 4.5 && <= 5
                     , base-compat
                     , base16-bytestring
                     , bytestring >= 0.10.4.0
                     , cereal
                     , containers
                     , cryptohash
                     , data-ordlist
                     , deepseq
                     , deepseq-generics
                     , digest
                     , directory
                     , errors
                     , filepath
                     , free
                     , Glob
                     , hslogger
                     , monad-logger
                     , MissingH
                     , mmorph
                     , mtl
                     , optparse-applicative >= 0.10
                     , pipes
                     , resourcet
                     , text
                     , transformers >= 0.3

                     , HUnit
                     , QuickCheck >= 2.7
                     , HTF
                     , sqlite-simple

Test-suite pure
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    src test
  Main-Is:           TestSuite.hs
  Build-Depends:       base >= 4 && < 5
                     , base-compat
                     , base16-bytestring
                     , bytestring >= 0.10.4.0
                     , cereal
                     , containers
                     , cryptohash
                     , data-ordlist
                     , deepseq
                     , deepseq-generics
                     , digest
                     , directory
                     , errors
                     , filepath
                     , free
                     , Glob
                     , hslogger
                     , MissingH
                     , mmorph
                     , mtl
                     , optparse-applicative >= 0.10
                     , pipes
                     , resourcet
                     , text
                     , transformers

                     , HUnit
                     , QuickCheck >= 2.7
                     , HTF

Test-suite integration
  Type:           exitcode-stdio-1.0
  Hs-Source-Dirs: src test
  Main-Is:        IntegrationTestSuite.hs
  GHC-Options:    -threaded -O
  Build-Depends:  base >= 4 && < 5
                  , base16-bytestring
                  , base-compat
                  , bytestring >= 0.10.4.0
                  , cereal
                  , containers
                  , cryptohash
                  , data-ordlist
                  , deepseq
                  , deepseq-generics
                  , digest
                  , directory
                  , errors
                  , filepath
                  , free
                  , hslogger
                  , MissingH
                  , mtl
                  , resourcet
                  , temporary
                  , text
                  , transformers

                  , HUnit
                  , QuickCheck >= 2.7
                  , HTF
                  , sqlite-simple

source-repository head
  type: git
  location: git://github.com:danstiner/dupes.git
