name:                dupes
version:             0.0.2.0
synopsis:            git-inspired command line utilities
description:         Command line utility for managing files inspired by git
license:             MIT
license-file:        LICENSE
author:              Daniel Stiner
maintainer:          Daniel Stiner <daniel.stiner@gmail.com>
stability:           experimental
homepage:            http://github.com/danstiner/dupes
bug-reports:         http://github.com/danstiner/dupes/issues
category:            Data, Network, Web
build-type:          Simple
cabal-version:       >=1.9.2
tested-with:         GHC==7.8.4, GHC==7.10.2, GHC == 7.11.*

library
  Hs-Source-Dirs:    src
  Exposed-Modules:   Repository
                   , Store
                   , Logging
                   , FileAccess
                   , PathSpec
                   , Database.SQLite
  GHC-Options:       -Wall -fno-warn-unused-binds -fno-ignore-asserts
  Build-Depends:       base >= 4.5 && <= 5
                     , base-compat
                     , base16-bytestring
                     , bytestring >= 0.10.4.0
                     , cereal
                     , containers
                     , cryptohash
                     , data-ordlist
                     , deepseq
                     , deepseq-generics
                     , digest
                     , directory
                     , errors
                     , filepath
                     , free
                     , Glob
                     , hslogger
                     , monad-logger
                     , MissingH
                     , mmorph
                     , mtl
                     , pipes
                     , resourcet
                     , text
                     , transformers >= 0.3

                     , HUnit
                     , QuickCheck >= 2.7
                     , sqlite-simple
                     , tasty-th
                     , tasty-hunit

executable dupes
  Hs-Source-Dirs:    executable
  Main-Is:           Main.hs
  Other-Modules:     Command.Commands
                   , Command.Init
                   , Command.Update
  GHC-Options:       -threaded -Wall -fno-warn-unused-binds -fno-ignore-asserts
  Build-Depends:     base >= 4.5 && <= 5
                     , dupes
                     , optparse-applicative >= 0.10
                     , resourcet

Test-suite pure
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    test
  Main-Is:           TestSuite.hs
  Build-Depends:       base >= 4 && < 5
                     , dupes
                     , tasty

Test-suite integration
  Type:           exitcode-stdio-1.0
  Hs-Source-Dirs: test
  Main-Is:        IntegrationTestSuite.hs
  GHC-Options:    -threaded
  Build-Depends:  base >= 4 && < 5
                  , dupes
                  , tasty

source-repository head
  type: git
  location: git://github.com:danstiner/dupes.git
